--- a/src/assets/stylesheet/all.scss
+++ b/src/assets/stylesheet/all.scss
@@ -1,4 +1,4 @@
-@import '~bootstrap/scss/functions';
-@import './helpers/variables';
 @import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/functions';
+@import './helpers/customBootstrap';
 @import '~bootstrap';
